Add Makamithi logo image to header and mobile menu

--- a/index.html
+++ b/index.html
@@ -1916,7 +1916,7 @@
     <!-- Top Navigation Bar -->
     <div class="top-nav">
         <a href="#" class="logo">
-            <i class="fas fa-seedling"></i>
+            <img src="assets/logos/Makamithi Logo.png" alt="Makamithi Logo" style="height: 40px; width: auto; margin-right: 0.5rem;">
             <span class="brand-name">Makamithi</span>
         </a>
         <div class="top-nav-center">
@@ -1983,6 +1983,7 @@
     <!-- Mobile Menu -->
     <ul class="mobile-menu">
         <div class="mobile-menu-header">
+            <img src="assets/logos/Makamithi Logo.png" alt="Makamithi Logo" style="height: 35px; width: auto; margin-right: 0.5rem;">
             <span class="brand-name">Makamithi</span>
             <button class="mobile-close" aria-label="Close menu">
                 <i class="fas fa-times"></i>
