Increase logo size and remove text from header

--- a/index.html
+++ b/index.html
@@ -1916,8 +1916,7 @@
     <!-- Top Navigation Bar -->
     <div class="top-nav">
         <a href="#" class="logo">
-            <img src="assets/logos/Makamithi Logo.png" alt="Makamithi Logo" style="height: 40px; width: auto; margin-right: 0.5rem;">
-            <span class="brand-name">Makamithi</span>
+            <img src="assets/logos/Makamithi Logo.png" alt="Makamithi Logo" style="height: 60px; width: auto;">
         </a>
         <div class="top-nav-center">
             <a href="#home" class="top-nav-link">Home</a>
@@ -1983,8 +1982,7 @@
     <!-- Mobile Menu -->
     <ul class="mobile-menu">
         <div class="mobile-menu-header">
-            <img src="assets/logos/Makamithi Logo.png" alt="Makamithi Logo" style="height: 35px; width: auto; margin-right: 0.5rem;">
-            <span class="brand-name">Makamithi</span>
+            <img src="assets/logos/Makamithi Logo.png" alt="Makamithi Logo" style="height: 50px; width: auto;">
             <button class="mobile-close" aria-label="Close menu">
                 <i class="fas fa-times"></i>
             </button>
