Remove contact form and replace hero image with local 1.jpeg

--- a/index.html
+++ b/index.html
@@ -304,12 +304,8 @@
             </div>
         </div>
         <div class="hero-image">
-            <img src="https://images.unsplash.com/photo-1464226184884-fa280b87c399?w=600&q=75&auto=format&fit=crop" 
-                 srcset="https://images.unsplash.com/photo-1464226184884-fa280b87c399?w=400&q=75&auto=format&fit=crop 400w,
-                         https://images.unsplash.com/photo-1464226184884-fa280b87c399?w=600&q=75&auto=format&fit=crop 600w,
-                         https://images.unsplash.com/photo-1464226184884-fa280b87c399?w=800&q=75&auto=format&fit=crop 800w"
-                 sizes="(max-width: 768px) 100vw, 50vw"
-                 alt="Makamithi Agro Store - Serving farmers with quality agricultural products" 
+            <img src="assets/images/1.jpeg" 
+                 alt="Makamithi - Fresh agricultural produce and farming supplies" 
                  loading="eager"
                  decoding="async">
         </div>
@@ -650,80 +646,6 @@
                         <i class="fas fa-directions"></i>
                         Get Directions
                     </a>
-                </div>
-            </div>
-            
-            <div class="contact-form-wrapper">
-                <h3 style="text-align: center; margin-bottom: 1.5rem; color: var(--primary-color);">Send Us a Message</h3>
-                <div class="contact-form contact-form-compact">
-                    <div class="form-success-message" id="successMessage">
-                        <i class="fas fa-check-circle"></i> Thank you! Your message has been sent successfully. We'll get back to you within 24 hours.
-                    </div>
-                    <div class="form-error-message" id="errorMessage">
-                        <i class="fas fa-exclamation-circle"></i> <span id="errorText">Oops! Something went wrong. Please try again.</span>
-                    </div>
-                    <form id="contactForm" novalidate>
-                        <div class="form-group">
-                            <label for="name">Full Name <span class="required">*</span></label>
-                            <input type="text" id="name" name="name" required>
-                            <i class="fas fa-check-circle validation-icon"></i>
-                            <div class="error-message">Please enter your full name</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email Address <span class="required">*</span></label>
-                            <input type="email" id="email" name="email" required>
-                            <i class="fas fa-check-circle validation-icon"></i>
-                            <div class="error-message">Please enter a valid email address</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="phone">Phone Number <span class="required">*</span></label>
-                            <input type="tel" id="phone" name="phone" placeholder="+254 7XX XXX XXX" required>
-                            <i class="fas fa-check-circle validation-icon"></i>
-                            <div class="error-message">Please enter a valid phone number</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="location">Location/County <span class="required">*</span></label>
-                            <select id="location" name="location" required>
-                                <option value="">Select your location</option>
-                                <option value="Machakos">Machakos</option>
-                                <option value="Kitui">Kitui</option>
-                                <option value="Makueni">Makueni</option>
-                                <option value="Kajiado">Kajiado</option>
-                                <option value="Nairobi">Nairobi</option>
-                                <option value="Kiambu">Kiambu</option>
-                                <option value="Murang'a">Murang'a</option>
-                                <option value="Embu">Embu</option>
-                                <option value="Tharaka Nithi">Tharaka Nithi</option>
-                                <option value="Other">Other County</option>
-                            </select>
-                            <i class="fas fa-check-circle validation-icon"></i>
-                            <div class="error-message">Please select your location</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="product-interest">Product Interest</label>
-                            <select id="product-interest" name="product-interest">
-                                <option value="">What are you interested in?</option>
-                                <option value="Animal Feeds">Animal Feeds</option>
-                                <option value="Fertilizers">Fertilizers</option>
-                                <option value="Seeds">Seeds</option>
-                                <option value="Crop Protection">Crop Protection</option>
-                                <option value="Veterinary Products">Veterinary Products</option>
-                                <option value="All Products">All Products</option>
-                                <option value="Other">Other/Consultation</option>
-                            </select>
-                            <i class="fas fa-check-circle validation-icon"></i>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message <span class="required">*</span></label>
-                            <textarea id="message" name="message" rows="5" placeholder="Tell us how we can help you..." required></textarea>
-                            <i class="fas fa-check-circle validation-icon"></i>
-                            <div class="error-message">Please enter your message (minimum 10 characters)</div>
-                        </div>
-                        <button type="submit" class="submit-btn">
-                            <span class="btn-text"><i class="fas fa-paper-plane"></i> Send Message</span>
-                            <div class="spinner"></div>
-                        </button>
-                    </form>
                 </div>
             </div>
         </div>
