--- a/index.html
+++ b/index.html
@@ -578,6 +578,57 @@
         </div>
     </section>
 
+    <!-- Our Team Section -->
+    <section class="team">
+        <div class="container">
+            <div class="section-title">
+                <h2>Our Team</h2>
+                <p>Dedicated professionals committed to your success</p>
+            </div>
+            <div class="team-content">
+                <div class="team-image">
+                    <img src="assets/images/Makamithi-Background-3.png" 
+                         alt="Makamithi team of agricultural experts and professionals" 
+                         loading="lazy"
+                         decoding="async">
+                </div>
+                <div class="team-text">
+                    <h3>Expertise You Can Trust</h3>
+                    <p>Our team comprises experienced agricultural professionals, qualified agronomists, and veterinary specialists who are passionate about supporting farmers across Kenya.</p>
+                    <p>With over 25 years of combined experience, we bring deep knowledge of local farming conditions, crop management, and animal care. Every team member is dedicated to providing personalized advice and solutions tailored to your specific farming needs.</p>
+                    
+                    <div class="team-features">
+                        <div class="team-feature-item">
+                            <i class="fas fa-user-graduate"></i>
+                            <div>
+                                <strong>Qualified Experts</strong>
+                                <p>Certified agronomists and veterinary specialists at every branch</p>
+                            </div>
+                        </div>
+                        <div class="team-feature-item">
+                            <i class="fas fa-handshake"></i>
+                            <div>
+                                <strong>Customer-Focused</strong>
+                                <p>Personalized consultation and ongoing support for your farming journey</p>
+                            </div>
+                        </div>
+                        <div class="team-feature-item">
+                            <i class="fas fa-map-marked-alt"></i>
+                            <div>
+                                <strong>Local Knowledge</strong>
+                                <p>Deep understanding of regional farming practices and conditions</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <a href="#contact" class="btn btn-primary" style="margin-top: 1.5rem;">
+                        <i class="fas fa-users"></i> Visit Our Branches
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
