Update partners section with real partner logos (Bayer, Syngenta, Corteva, SeedCo, Unga, Osha)

--- a/index.html
+++ b/index.html
@@ -513,24 +513,56 @@
             </div>
             <div class="partners-track">
                 <div class="partners-slide">
-                    <div class="partner-logo">Partner 1</div>
-                    <div class="partner-logo">Partner 2</div>
-                    <div class="partner-logo">Partner 3</div>
-                    <div class="partner-logo">Partner 4</div>
-                    <div class="partner-logo">Partner 5</div>
-                    <div class="partner-logo">Partner 6</div>
-                    <div class="partner-logo">Partner 7</div>
-                    <div class="partner-logo">Partner 8</div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/Bayer.png" alt="Bayer">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/syngenta.png" alt="Syngenta">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/Corteva.png" alt="Corteva">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/seedco.png" alt="SeedCo">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/Unga-plc.png" alt="Unga PLC">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/Osha.png" alt="Osha">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/Bayer.png" alt="Bayer">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/syngenta.png" alt="Syngenta">
+                    </div>
                 </div>
                 <div class="partners-slide" aria-hidden="true">
-                    <div class="partner-logo">Partner 1</div>
-                    <div class="partner-logo">Partner 2</div>
-                    <div class="partner-logo">Partner 3</div>
-                    <div class="partner-logo">Partner 4</div>
-                    <div class="partner-logo">Partner 5</div>
-                    <div class="partner-logo">Partner 6</div>
-                    <div class="partner-logo">Partner 7</div>
-                    <div class="partner-logo">Partner 8</div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/Bayer.png" alt="Bayer">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/syngenta.png" alt="Syngenta">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/Corteva.png" alt="Corteva">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/seedco.png" alt="SeedCo">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/Unga-plc.png" alt="Unga PLC">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/Osha.png" alt="Osha">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/Bayer.png" alt="Bayer">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="assets/partners/syngenta.png" alt="Syngenta">
+                    </div>
                 </div>
             </div>
         </div>
