Make partner logos clickable with links to partner websites

--- a/index.html
+++ b/index.html
@@ -513,56 +513,56 @@
             </div>
             <div class="partners-track">
                 <div class="partners-slide">
-                    <div class="partner-logo">
+                    <a href="https://www.bayer.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/Bayer.png" alt="Bayer">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.syngenta.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/syngenta.png" alt="Syngenta">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.corteva.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/Corteva.png" alt="Corteva">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.seedcogroup.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/seedco.png" alt="SeedCo">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.unga.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/Unga-plc.png" alt="Unga PLC">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.oshochemicals.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/Osha.png" alt="Osha">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.bayer.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/Bayer.png" alt="Bayer">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.syngenta.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/syngenta.png" alt="Syngenta">
-                    </div>
+                    </a>
                 </div>
                 <div class="partners-slide" aria-hidden="true">
-                    <div class="partner-logo">
+                    <a href="https://www.bayer.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/Bayer.png" alt="Bayer">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.syngenta.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/syngenta.png" alt="Syngenta">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.corteva.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/Corteva.png" alt="Corteva">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.seedcogroup.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/seedco.png" alt="SeedCo">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.unga.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/Unga-plc.png" alt="Unga PLC">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.oshochemicals.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/Osha.png" alt="Osha">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.bayer.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/Bayer.png" alt="Bayer">
-                    </div>
-                    <div class="partner-logo">
+                    </a>
+                    <a href="https://www.syngenta.com" target="_blank" rel="noopener noreferrer" class="partner-logo">
                         <img src="assets/partners/syngenta.png" alt="Syngenta">
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
