--- a/index.html
+++ b/index.html
@@ -336,11 +336,7 @@
                         </div>
                     </div>
                     <div class="story-image">
-                        <img src="https://images.unsplash.com/photo-1556910638-af4965f5c623?w=600&q=70&auto=format&fit=crop" 
-                             srcset="https://images.unsplash.com/photo-1556910638-af4965f5c623?w=400&q=70&auto=format&fit=crop 400w,
-                                     https://images.unsplash.com/photo-1556910638-af4965f5c623?w=600&q=70&auto=format&fit=crop 600w,
-                                     https://images.unsplash.com/photo-1556910638-af4965f5c623?w=800&q=70&auto=format&fit=crop 800w"
-                             sizes="(max-width: 768px) 100vw, 50vw"
+                        <img src="assets/images/3.jpeg" 
                              alt="Our main branch in Machakos, Kenya" 
                              loading="lazy"
                              decoding="async">
@@ -361,19 +357,13 @@
                     </div>
                 </div>
                 <div class="vm-card vm-image-card">
-                    <img src="https://images.unsplash.com/photo-1592982537447-7440770cbfc9?w=500&q=70&auto=format&fit=crop" 
-                         srcset="https://images.unsplash.com/photo-1592982537447-7440770cbfc9?w=300&q=70&auto=format&fit=crop 300w,
-                                 https://images.unsplash.com/photo-1592982537447-7440770cbfc9?w=500&q=70&auto=format&fit=crop 500w"
-                         sizes="(max-width: 768px) 100vw, 400px"
+                    <img src="assets/images/4.jpeg" 
                          alt="Quality agricultural products" 
                          loading="lazy"
                          decoding="async">
                 </div>
                 <div class="vm-card vm-image-card order-mobile">
-                    <img src="https://images.unsplash.com/photo-1574943320219-553eb213f72d?w=500&q=70&auto=format&fit=crop" 
-                         srcset="https://images.unsplash.com/photo-1574943320219-553eb213f72d?w=300&q=70&auto=format&fit=crop 300w,
-                                 https://images.unsplash.com/photo-1574943320219-553eb213f72d?w=500&q=70&auto=format&fit=crop 500w"
-                         sizes="(max-width: 768px) 100vw, 400px"
+                    <img src="assets/images/2.jpeg" 
                          alt="Sustainable farming" 
                          loading="lazy"
                          decoding="async">
