Update WhatsApp number to 0748970757 and replace all product images with local versions

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <h1>Achieve more when farming with us!</h1>
             <p>At <span class="brand-name">Makamithi</span>, we empower farmers across Kenya by enhancing their skills, expanding market access, and strengthening their financial resources. Together, we cultivate a sustainable future for agriculture in our nation.</p>
             <div class="cta-buttons">
-                <a href="https://wa.me/254768164336?text=Hello%20Makamithi,%20I%20have%20a%20question" target="_blank" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Ask us a question</a>
+                <a href="https://wa.me/254748970757?text=Hello%20Makamithi,%20I%20have%20a%20question" target="_blank" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Ask us a question</a>
                 <a href="#products" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Discover our products</a>
             </div>
         </div>
@@ -393,10 +393,7 @@
                 <!-- Animal Feeds -->
                 <div class="product-card" data-category="animal-feeds">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?w=400&q=70&auto=format&fit=crop" 
-                             srcset="https://images.unsplash.com/photo-1560493676-04071c5f467b?w=300&q=70&auto=format&fit=crop 300w,
-                                     https://images.unsplash.com/photo-1560493676-04071c5f467b?w=400&q=70&auto=format&fit=crop 400w"
-                             sizes="(max-width: 768px) 90vw, 300px"
+                        <img src="assets/products/animal-feeds.jpg" 
                              alt="Animal Feeds" 
                              loading="lazy"
                              decoding="async">
@@ -413,10 +410,7 @@
                 <!-- Fertilizers -->
                 <div class="product-card" data-category="fertilizers">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1530836369250-ef72a3f5cda8?w=400&q=70&auto=format&fit=crop" 
-                             srcset="https://images.unsplash.com/photo-1530836369250-ef72a3f5cda8?w=300&q=70&auto=format&fit=crop 300w,
-                                     https://images.unsplash.com/photo-1530836369250-ef72a3f5cda8?w=400&q=70&auto=format&fit=crop 400w"
-                             sizes="(max-width: 768px) 90vw, 300px"
+                        <img src="assets/products/fertilizers.jpg" 
                              alt="Fertilizers" 
                              loading="lazy"
                              decoding="async">
@@ -433,10 +427,7 @@
                 <!-- Seeds -->
                 <div class="product-card" data-category="seeds">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1592504411290-6d2f83a3e20a?w=400&q=70&auto=format&fit=crop" 
-                             srcset="https://images.unsplash.com/photo-1592504411290-6d2f83a3e20a?w=300&q=70&auto=format&fit=crop 300w,
-                                     https://images.unsplash.com/photo-1592504411290-6d2f83a3e20a?w=400&q=70&auto=format&fit=crop 400w"
-                             sizes="(max-width: 768px) 90vw, 300px"
+                        <img src="assets/products/seeds.jpg" 
                              alt="Seeds" 
                              loading="lazy"
                              decoding="async">
@@ -453,10 +444,7 @@
                 <!-- Crop Protection -->
                 <div class="product-card" data-category="crop-protection">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1615671524827-c1fe3973b648?w=400&q=70&auto=format&fit=crop" 
-                             srcset="https://images.unsplash.com/photo-1615671524827-c1fe3973b648?w=300&q=70&auto=format&fit=crop 300w,
-                                     https://images.unsplash.com/photo-1615671524827-c1fe3973b648?w=400&q=70&auto=format&fit=crop 400w"
-                             sizes="(max-width: 768px) 90vw, 300px"
+                        <img src="assets/products/crop-protection.jpg" 
                              alt="Crop Protection" 
                              loading="lazy"
                              decoding="async">
@@ -473,10 +461,7 @@
                 <!-- Veterinary Products -->
                 <div class="product-card" data-category="veterinary">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1583337130417-3346a1be7dee?w=400&q=70&auto=format&fit=crop" 
-                             srcset="https://images.unsplash.com/photo-1583337130417-3346a1be7dee?w=300&q=70&auto=format&fit=crop 300w,
-                                     https://images.unsplash.com/photo-1583337130417-3346a1be7dee?w=400&q=70&auto=format&fit=crop 400w"
-                             sizes="(max-width: 768px) 90vw, 300px"
+                        <img src="assets/products/veterinary.jpg" 
                              alt="Veterinary Products" 
                              loading="lazy"
                              decoding="async">
@@ -754,7 +739,7 @@
     </section>
 
     <!-- WhatsApp Chat Button -->
-    <a href="https://wa.me/254768164336?text=Hello%20Makamithi,%20I%20would%20like%20to%20inquire%20about%20your%20products" 
+    <a href="https://wa.me/254748970757?text=Hello%20Makamithi,%20I%20would%20like%20to%20inquire%20about%20your%20products" 
        class="whatsapp-float" 
        target="_blank" 
        aria-label="Chat on WhatsApp">
