--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                         <i class="fas fa-shield-alt"></i>
                     </div>
                     <div class="product-content">
-                        <h3>Crop Protection</h3>
+                        <h3>Crop Protection Products</h3>
                         <p>Advanced solutions to protect crops from pests and diseases.</p>
                     </div>
                 </div>
