--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         </div>
                     </div>
                     <div class="story-image">
-                        <img src="assets/images/3.jpeg" 
+                        <img src="assets/images/3.jpg" 
                              alt="Our main branch in Machakos, Kenya" 
                              loading="lazy"
                              decoding="async">
