Improve hero section UI for larger screens
- Enhanced layout with hero-container wrapper and max-width constraints
- Upgraded background with gradient and improved decorative elements
- Improved typography with better spacing and letter-spacing
- Added decorative line before tagline with uppercase styling
- Enhanced CTA buttons with gradient backgrounds and better shadows
- Added image hover effects and decorative background
- Improved responsive design for mobile and tablet devices
- Better visual hierarchy and spacing throughout the section

--- a/index.html
+++ b/index.html
@@ -294,20 +294,22 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-content">
-            <div class="hero-tagline">Know-how for your Agribusiness</div>
-            <h1>Achieve more when farming with us!</h1>
-            <p>At <span class="brand-name">Makamithi</span>, we empower farmers across Kenya by enhancing their skills, expanding market access, and strengthening their financial resources. Together, we cultivate a sustainable future for agriculture in our nation.</p>
-            <div class="cta-buttons">
-                <a href="https://wa.me/254748970757?text=Hello%20Makamithi,%20I%20have%20a%20question" target="_blank" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Ask us a question</a>
-                <a href="#products" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Discover our products</a>
+        <div class="hero-container">
+            <div class="hero-content">
+                <div class="hero-tagline">Know-How For Your Agribusiness</div>
+                <h1>Achieve more when farming with us!</h1>
+                <p>At <span class="brand-name">Makamithi</span>, we empower farmers across Kenya by enhancing their skills, expanding market access, and strengthening their financial resources. Together, we cultivate a sustainable future for agriculture in our nation.</p>
+                <div class="cta-buttons">
+                    <a href="https://wa.me/254748970757?text=Hello%20Makamithi,%20I%20have%20a%20question" target="_blank" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Ask us a question</a>
+                    <a href="#products" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Discover our products</a>
+                </div>
             </div>
-        </div>
-        <div class="hero-image">
-            <img src="assets/images/1.jpeg" 
-                 alt="Makamithi - Fresh agricultural produce and farming supplies" 
-                 loading="eager"
-                 decoding="async">
+            <div class="hero-image">
+                <img src="assets/images/1.jpeg" 
+                     alt="Makamithi - Fresh agricultural produce and farming supplies" 
+                     loading="eager"
+                     decoding="async">
+            </div>
         </div>
     </section>
 
